Cambios desde  rama con error

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h2>Nuevo titulo desde otra rama</h2>
-	    <h3>Segundo titulo prueba</h3>
+    <h3>Segundo titulo prueba en ramaConError</h3>
 </body>
 </html>
